--- a/web/src/app/sale/bill/bill.component.css
+++ b/web/src/app/sale/bill/bill.component.css
@@ -24,3 +24,31 @@ input::-webkit-inner-spin-button {
 .otherShopClass{
     color: red;
 }
+
+.bgRemove{
+    background: none;
+    border: none;
+}
+
+.deletes_icon {
+    background: #ff0000;
+    color: #fff;
+    padding: 3px;
+    border-radius: 20px;
+    font-size: 17px;
+    height: 24px !important;
+    width: 24px !important;
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+.table tbody tr td {
+    font-size: 13px !important;
+    padding: 2px !important;
+}
+
+.table tbody tr td {
+    font-size: 13px !important;
+    padding: 2px !important;
+}
