--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -469,7 +469,9 @@
                             <tr class="text-center" *ngFor="let data of billItemList ; let i = index;">
                                 <td></td>
                                 <td>{{i+1}}</td>
-                                <td></td>
+                                <td> <button class="bgRemove" *ngIf="data.Status !== 0" >
+                                    <mat-icon class="deletes_icon ms-1">delete_forever</mat-icon>
+                                </button></td>
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
                                     {{data.HSNCode}}</td>
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
@@ -516,8 +518,8 @@
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
                                 class="text-center">C{{i+1}}</td>
                                 <td>
-                                    <button *ngIf="data.Status !== 0" mat-mini-fab color="primary">
-                                        <mat-icon>delete</mat-icon>
+                                    <button class="bgRemove" *ngIf="data.Status !== 0" >
+                                        <mat-icon class="deletes_icon ms-1">delete_forever</mat-icon>
                                     </button>
                                 </td>
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
