--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -472,7 +472,7 @@
                                 <td></td>
                                 <td>{{i+1}}</td>
                                 <td> <button class="bgRemove" *ngIf="data.Status !== 0" >
-                                    <mat-icon class="deletes_icon ms-1">delete_forever</mat-icon>
+                                    <mat-icon class="deletes_icon ms-1" (click)="deleteItem('Product', i)" >delete_forever</mat-icon>
                                 </button></td>
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
                                     {{data.HSNCode}}</td>
