--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -1,3 +1,4 @@
+
 <section class="content">
     <div class="container-fluid">
         <div class="block-header"> </div>
@@ -1421,9 +1422,9 @@
                     </div>
                 </div>
                 <!-- bill info -->
-                <span *ngIf="this.data ">
+                <div *ngIf="this.id != 0">
                     <app-bill></app-bill>
-                </span>
+                </div>
             </div>
         </div>
     </div>
