--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -1422,7 +1422,7 @@
                     </div>
                 </div>
                 <!-- bill info -->
-                <div *ngIf="this.id != 0">
+                <div>
                     <app-bill></app-bill>
                 </div>
             </div>
