--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -64,7 +64,8 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Employee Name</mat-label>
                         <mat-select name="Employee" [(ngModel)]="BillMaster.Employee"
-                            [disabled]="BillMaster.ID !== null" #Employeecontrol>
+                            [disabled]="user.UserGroup !== 'CompanyAdmin'  &&  BillMaster.ID !== null
+                            " #Employeecontrol>
                             <mat-option value="None"></mat-option>
                             <mat-option *ngFor="let el of employeeList let i = index;" [value]="el.ID">
                                 {{el.Name}}
@@ -176,8 +177,7 @@
                             <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
                                 (selectionChange)="getFieldSupportData(i);getBarCodeList(i)" editable="true"
                                 [required]="spec.Required === 1" #singleSelect>
-                                <mat-option>
-                                </mat-option>
+                                <mat-option value=""> </mat-option>
                                 <mat-option *ngFor="let val of spec.SptFilterData " [value]="val.TableValue">
                                     {{val.TableValue}}
                                 </mat-option>
@@ -186,6 +186,8 @@
                                 {{spec.FieldName}} is Required
                             </mat-error>
                         </mat-form-field>
+                        <mat-checkbox class="pt-3" name="{{spec.FieldName+'0'}}" color="primary"
+                                            [(ngModel)]="spec.CheckBoxValue"></mat-checkbox>
                         <mat-form-field class="mr-0 mb-0" *ngIf="spec.DisplayAdd === 1">
                             <mat-label>Add {{spec.FieldName}}</mat-label>
                             <input matInput name="{{spec.FieldName+'1'}}"
@@ -355,11 +357,16 @@
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>TAX Type</mat-label>
-                        <mat-select name="GSTType" [(ngModel)]="BillItem.GSTType" required
-                            (selectionChange)="calculations('TotalAmount', 'total')" #GSTTypecontrol1>
+                        <mat-select name="GSTType" [(ngModel)]="BillItem.GSTType"
+                            (selectionChange)="calculations('TotalAmount', 'total')"  [required]=true #GSTTypecontrol1>
                             <mat-option value="None" *ngIf="BillItem.GSTPercentage === 0">None</mat-option>
-                            <mat-option  [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}</mat-option>
+                            <mat-option  [value]="g.Name" *ngFor="let g of gstList"> 
+                                <span *ngIf="BillItem.GSTPercentage !== 0">{{g.Name}} </span> 
+                            </mat-option>
                         </mat-select>
+                        <mat-error>
+                            GSTType is required
+                        </mat-error>
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 mb-0">
