--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -105,6 +105,7 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/sale/billing',0,0]" id="collapseExample">Billing</a>
+              <a href="javascript:void(0)" [routerLink]="['/sale/billinglist',0]" id="collapseExample">Bill List</a>
               <a href="javascript:void(0)" [routerLink]="['/sale/customerList']" id="collapseExample">CustomerList</a>
               <a href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample">Doctor</a>
             </div>
