--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -1,5 +1,5 @@
 
-<div class="card">
+<div  class="card" >
     <div class="header">
         <div class="row">
             <div class="col-md-1 col-6">
@@ -627,7 +627,17 @@
                             #GSTAmtcontrol [autocomplete]="false" disabled>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                <div class="col-xl-1 col-lg-1 col-md-6 col-sm-6 col-6  mb-0"
+                *ngFor="let gst of gst_detail">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>{{gst.GSTType}}</mat-label>
+                    <input matInput name="igstAmt" value="{{gst.Amount | number:'1.0-2'}}" disabled>
+                    <mat-error>
+                        GST Amt is required
+                    </mat-error>
+                </mat-form-field>
+            </div>
+                <!-- <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label class="cus-label">CGST</mat-label>
                         <input class="cust-input" type="number" matInput name="CGST" [(ngModel)]="cgst" disabled>
@@ -638,7 +648,7 @@
                         <mat-label class="cus-label">SGST</mat-label>
                         <input class="cust-input" type="number" matInput name="SGST" [(ngModel)]="sgst" disabled>
                     </mat-form-field>
-                </div>
+                </div> -->
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Additional Discount%</mat-label>
@@ -675,7 +685,8 @@
             <div class="row">
                 <div class="col-md-12 col-12">
                     <button type="button" mat-raised-button color="primary" (click)="onSubmit()" [disabled]="(billItemList?.length === 0 && serviceLists?.length === 0) || BillMaster.ID !== null" >Save</button>
-                    <button type="button" class="me-3 ms-3" mat-raised-button color="primary">Update</button>
+                    <button type="button" class="me-3 ms-3" mat-raised-button color="primary" 
+                     [disabled]="BillMaster.ID === null" (click)="update()">Update</button>
                     <button type="button" mat-raised-button color="primary">Receipt</button>
                     <button type="button" class="me-3 ms-3" mat-raised-button color="primary">Receipt +
                         Power</button>
