--- a/web/src/app/sale/bill-list/bill-list.component.css
+++ b/web/src/app/sale/bill-list/bill-list.component.css
@@ -45,3 +45,10 @@
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
+.old{
+  background-color: rgb(252, 89, 64);
+}
+
+.new{
+  background-color: rgb(220, 220, 220);
+}
