--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -460,7 +460,7 @@
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-6 col-sm-12 mb-0  mb-3">
-                    <button (focus)=" calculations('TotalAmount', 'serviceTotal')" class="mr-3" type="submit"
+                    <button  type="submit" (focus)=" calculations('TotalAmount', 'serviceTotal')" class="mr-3"
                         [disabled]="Service.TotalAmount === 0" mat-raised-button color="primary">Add</button>
                 </div>
             </div>
