--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -1423,7 +1423,7 @@
                     </div>
                 </div>
                 <!-- bill info -->
-                <div *ngIf="this.id != 0 && this.id2 != 0 ">
+                <div *ngIf="this.id != 0 ">
                     <app-bill @fade [customerID2]="this.id"></app-bill>
                 </div>
             </div>
