--- a/web/src/app/sale/customer-list/customer-list.component.html
+++ b/web/src/app/sale/customer-list/customer-list.component.html
@@ -58,7 +58,7 @@
                       <p class="text-center m-0">{{data.Email}}</p>
                       <p class="text-center m-0 cardAddress">{{data.Address }}</p>
                       <div class="text-center mb-3">
-                        <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/billing',0,data.ID]">edit</mat-icon>
+                        <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0]">edit</mat-icon>
                         <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                       </div>
                     </div>
@@ -95,7 +95,7 @@
                           <tr class="text-center" *ngFor="let data of dataList let i = index;"
                             style="white-space: nowrap;">
                             <td style="width: 7%;">
-                              <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/billing',0,data.ID]">edit</mat-icon>
+                              <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0,]">edit</mat-icon>
                               <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                             </td>
                             <td class="text-left">{{dataList.length - i }}</td>
