--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -360,9 +360,11 @@
                         <mat-select name="GSTType" [(ngModel)]="BillItem.GSTType"
                             (selectionChange)="calculations('TotalAmount', 'total')"  [required]=true #GSTTypecontrol1>
                             <mat-option value="None" *ngIf="BillItem.GSTPercentage === 0">None</mat-option>
-                            <mat-option  [value]="g.Name" *ngFor="let g of gstList"> 
-                                <span *ngIf="BillItem.GSTPercentage !== 0">{{g.Name}} </span> 
-                            </mat-option>
+                            <span *ngIf="BillItem.GSTPercentage !== 0">
+                                <mat-option  [value]="g.Name" *ngFor="let g of gstList"> 
+                                    <span *ngIf="BillItem.GSTPercentage !== 0">{{g.Name}} </span> 
+                                </mat-option>
+                            </span>
                         </mat-select>
                         <mat-error>
                             GSTType is required
@@ -389,9 +391,9 @@
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 mb-0 mb-3  ms-auto">
-                    <button *ngIf="BillItem.Manual === false && BillItem.PreOrder === false" type="submit" [disabled]="!f1.valid || this.BillItem.Quantity === 0 || this.BillItem.Barcode === null" mat-raised-button color="primary" (focus)="calculations('GSTPercentage', 'gst')">Add</button>
-                    <button *ngIf="BillItem.PreOrder" type="submit"  [disabled]="!f1.valid || this.BillItem.Quantity === 0" mat-raised-button color="primary">PreOder</button>
-                    <button *ngIf="BillItem.Manual" type="submit" [disabled]="!f1.valid || this.BillItem.Quantity === 0" mat-raised-button color="primary">Manual</button>
+                    <button *ngIf="BillItem.Manual === false && BillItem.PreOrder === false" type="submit" [disabled]="!f1.valid || this.BillItem.Quantity === 0 || this.GstTypeDis || this.BillItem.Barcode === null" mat-raised-button color="primary" (click)="calculations('GSTPercentage', 'gst');notifyGst();">Add</button>
+                    <button *ngIf="BillItem.PreOrder" type="submit"  [disabled]="!f1.valid || this.GstTypeDis  || this.BillItem.Quantity === 0"  mat-raised-button color="primary">PreOder</button>
+                    <button *ngIf="BillItem.Manual" type="submit" [disabled]="!f1.valid || this.BillItem.Quantity === 0 || this.GstTypeDis "   mat-raised-button color="primary">Manual</button>
                 </div>
             </div>
             <!-- services calclution -->
@@ -446,9 +448,11 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>TAX Type</mat-label>
                         <mat-select name="GSTType" [(ngModel)]="Service.GSTType"
-                            (blur)="calculations('TotalAmount', 'serviceTotal')" required #GSTTypecontrol1>
-                            <mat-option value="None">None</mat-option>
-                            <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}</mat-option>
+                            (selectionChange)="calculations('TotalAmount', 'serviceTotal')" required #GSTTypecontrol1>
+                            <mat-option value="None" *ngIf="Service.GSTPercentage === 0">None</mat-option>
+                            <span *ngIf="Service.GSTPercentage !== 0">
+                                <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}</mat-option>
+                            </span>
                         </mat-select>
                     </mat-form-field>
                 </div>
@@ -460,8 +464,8 @@
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-6 col-sm-12 mb-0  mb-3">
-                    <button  type="submit" (focus)=" calculations('TotalAmount', 'serviceTotal')" class="mr-3"
-                        [disabled]="Service.TotalAmount === 0" mat-raised-button color="primary">Add</button>
+                    <button  type="submit" (click)=" calculations('TotalAmount', 'serviceTotal');notifyGst();" class="mr-3"
+                        [disabled]="Service.TotalAmount === 0 || this.GstTypeDis" mat-raised-button color="primary">Add</button>
                 </div>
             </div>
         </form>
@@ -531,7 +535,7 @@
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
                                     {{(data.Warranty !== 'undefined')? data.Warranty: '-'}}</td>
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
-                                    {{(data.Option !== 'undefined' && data.Option !== 'null')?data.Option: '-'}}</td>
+                                    {{(data.Optionsss !== 'undefined' && data.Optionsss !== 'null')?data.Optionsss: '-'}}</td>
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }">
                                     <span *ngIf="data.Manual === 1">Manual</span>
                                     <span *ngIf="data.PreOrder === 1">PreOrder</span>
